Copied player embed and script from branded-player-ads to since own video is having licensing issues.

--- a/demos/developer-showcase/ics-demo/index.html
+++ b/demos/developer-showcase/ics-demo/index.html
@@ -21,6 +21,9 @@ Ex: //content.jwplatform.com/players/{MediaID}-{PlayerID}.js
 
 MediaID and PlayerID are available in your Account Dashboard. -->
 
-<script src="//content.jwplatform.com/players/xJ7Wcodt-xDYBr4fw.js"></script>
 
-<div id="player"></div>
+<div id="lbDiv"></div>
+<script src="//content.jwplatform.com/libraries/5iL2r8dY.js"></script>
+
+<a href="javascript:playerInstance.play();">Toggle playback</a>
+<a href="javascript:alert('The volume of the player is: ' + playerInstance.getVolume());">Report volume</a>
