--- a/demos/developer-showcase/ics-demo/index.html
+++ b/demos/developer-showcase/ics-demo/index.html
@@ -23,7 +23,21 @@ MediaID and PlayerID are available in your Account Dashboard. -->
 
 
 <div id="lbDiv"></div>
-<script src="//content.jwplatform.com/libraries/5iL2r8dY.js"></script>
+<!-- <script src="//content.jwplatform.com/libraries/5iL2r8dY.js"></script> -->
+<!-- <script src="//content.jwplatform.com/players/xJ7Wcodt-xDYBr4fw.js"></script> -->
+<script src="//content.jwplatform.com/libraries/Jq6HIbgz.js"></script>
+
+<script type="text/javascript">
+	var playerInstance = jwplayer("lbDiv");
+	playerInstance.setup({
+		// file: "//content.jwplatform.com/videos/aeZLVVPv-v7C1BfDE.mp4",
+		// image: "//content.jwplatform.com/thumbs/aeZLVVPv-480.jpg",
+		// file: "//content.jwplatform.com/videos/xJ7Wcodt-xDYBr4fw.mp4",
+		// image: "//content.jwplatform.com/thumbs/xJ7Wcodt-480.jpg",
+		playlist: 'https://cdn.jwplayer.com/v2/media/tkM1zvBq',
+		playbackRateControls: true
+	});
+</script>
 
 <a href="javascript:playerInstance.play();">Toggle playback</a>
-<a href="javascript:alert('The volume of the player is: ' + playerInstance.getVolume());">Report volume</a>
+<a href="javascript:alert('The volume of the player is: ' + jwplayer('myelement').getVolume());">Report volume</a>
